# forex_notify

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml.example
.github/workflows/: build.yml
src/: forex.rs  main.rs  setting.rs
src/notify/: mod.rs  ntfy.rs  telegram.rs  webhook.rs
